# dune-geometry

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  LICENSE.md  Makefile.am  README  README.md  __init__.py  _geometry.cc  _referenceelements.py  config.h.cmake  configure.ac  dune-geometry-config.cmake.in  dune-geometry.pc.in  dune.module  multilineargeometry.hh  package.py  prevent-cherry-picks  pyproject.toml  quadpy.py  quadraturerules.hh  referenceelements.hh  setup.py  type.hh
doc/appl/: CMakeLists.txt  Makefile.am
doc/appl/refelements/: CMakeLists.txt  Makefile.am  SVG.readme  gg_tetrahedron.png.license  referenceelementspage  referenceelementspage.txt
dune/geometry/: CMakeLists.txt  Makefile.am  affinegeometry.hh  axisalignedcubegeometry.hh  bilineargeometry.hh  deprecated_topology.hh  dimension.hh  generalvertexorder.hh  genericreferenceelements.hh  geometry.hh  identitygeometry.hh  localfiniteelementgeometry.hh  mappedgeometry.hh  mockgeometry.hh  multilineargeometry.hh  quadraturerules.hh  referenceelement.hh  referenceelementimplementation.cc  referenceelementimplementation.hh  referenceelements.cc  referenceelements.hh  refinement.hh  staticgeometrytype.hh  topologyfactory.hh  trilineargeometry.hh  type.cc  type.hh  typeindex.hh  typemap.hh  vertexorder.hh  virtualrefinement.cc  virtualrefinement.hh
dune/geometry/common/: cast.hh  quadmath.hh
dune/geometry/genericgeometry/: CMakeLists.txt  Makefile.am  cachedmapping.hh  codimtable.hh  conversion.hh  cornermapping.hh  geometry.hh  geometrytraits.hh  hybridmapping.hh  hybridmappingfactory.hh  mapping.hh  mappingprovider.hh  matrixhelper.hh  maximum.hh  referencedomain.cc  referencedomain.hh  referenceelements.hh  referencetopologies.hh  simplexify.cc  simplexify.hh  subtopologies.cc  subtopologies.hh  topologytypes.hh  traceprovider.hh
dune/geometry/genericgeometry/doc/: genericgeometrypage  genericgeometrytransitionpage
dune/geometry/genericgeometry/test/: .gitignore  CMakeLists.txt  Makefile.am  checkgeometry.hh  testbasicgeometry.cc  testmatrix.cc  testsimplexify.cc  testsubtopologies.cc
dune/geometry/implementation/: CMakeLists.txt  Makefile.am  matrixhelper.hh
dune/geometry/mapping/: Makefile.am  affinemapping.hh  bilinearmapping.hh  cornermapping.hh  trilinearmapping.hh
dune/geometry/quadraturerules/: CMakeLists.txt  Makefile.am  calculatesimplexrules.hh  compositequadraturerule.hh  cube.cc  cube2dquadrature.inc.hh  cube3dquadrature.inc.hh  cube_imp.hh  gauss.cc  gauss_imp.hh  gauss_imp2.hh  gaussjacobi.mac  gausslobatto.cc  gausslobatto.mac  gausslobatto2.mac  gausslobatto_imp.hh  gausslobatto_imp2.hh  gausslobatto_imp_old.hh  gausslobatto_old.mac  gausslobattoquadrature.hh  gausslobattoquadrature.inc.hh  gaussquadrature.hh  gaussquadrature.inc.hh  gaussradau.mac  gaussradauleft.cc  gaussradauleft_imp.hh  gaussradauleft_imp2.hh  gaussradauleftquadrature.hh  gaussradauright.cc  gaussradauright_imp.hh  gaussradaurightquadrature.hh  genericquadrature.hh  intfunc.cc  intfunc.hh  jacobi1quadrature.hh  jacobi1quadrature.inc.hh  jacobi2quadrature.hh  jacobi2quadrature.inc.hh  jacobiNquadrature.hh  jacobi_1_0.cc  (+25 more)
dune/geometry/refinement/: CMakeLists.txt  Makefile.am  base.cc  hcube.cc  hcubetriangulation.cc  prismtriangulation.cc  pyramidtriangulation.cc  simplex.cc  virtualrefinementtags.hh
dune/geometry/test/: .gitignore  CMakeLists.txt  Makefile.am  benchmark-geometries.cc  checkgeometry.hh  comparegeometries.hh  localfiniteelements.hh  referenceelementgeometry.hh  referenceelementstest.cc  test-affinegeometry.cc  test-axisalignedcubegeometry.cc  test-constexpr-geometrytype.cc  test-cornerstoragerefwrap.cc  test-fromvertexcount.cc  test-fromvertices.cc  test-genericquadrature.cc  test-geometrytype-id.cc  test-geometrytype.cc  test-high-dim-refelements.cc  test-localfiniteelementgeometry.cc  test-mappedgeometry.cc  test-multilineargeometry.cc  test-nonetype.cc  test-quadrature.cc  test-referenceelements.cc  test-refinement.cc
dune/geometry/utility/: CMakeLists.txt  algorithms.hh  convergence.hh  convert_rules.cc  convert_rules.py  create_rule_tet.cc  defaultmatrixhelper.hh  gausslobatto.mac  jacobian.mac  jacobian.txt  make_all_rules.py  make_rules.py  rules.templ.hh  staticIf.hh  typefromvertexcount.hh  typefromvertices.hh  writequad.mac  writequad2.mac
dune/geometry/utility/rules/: cube2d.txt  cube3d.txt  prism.txt  pyramid.txt  simplex2d.txt  simplex3d.txt
dune/geometry/utility/rules/gauss/: 1-1.csv  11-6.csv  13-7.csv  15-8.csv  17-9.csv  19-10.csv  21-11.csv  23-12.csv  25-13.csv  27-14.csv  29-15.csv  3-2.csv  31-16.csv  33-17.csv  35-18.csv  37-19.csv  39-20.csv  41-21.csv  43-22.csv  45-23.csv  47-24.csv  49-25.csv  5-3.csv  51-26.csv  53-27.csv  55-28.csv  57-29.csv  59-30.csv  61-31.csv  7-4.csv  9-5.csv
dune/geometry/utility/rules/gausslobatto/: 1-2.csv  11-7.csv  13-8.csv  15-9.csv  17-10.csv  19-11.csv  21-12.csv  23-13.csv  25-14.csv  27-15.csv  29-16.csv  3-3.csv  31-17.csv  5-4.csv  7-5.csv  9-6.csv
dune/geometry/utility/rules/hex/: 1-1.csv  11-90.csv  3-6.csv  5-14.csv  7-34.csv  9-58.csv
dune/geometry/utility/rules/jacobi1/: 1-1.csv  11-6.csv  13-7.csv  15-8.csv  17-9.csv  19-10.csv  21-11.csv  23-12.csv  25-13.csv  27-14.csv  29-15.csv  3-2.csv  31-16.csv  33-17.csv  35-18.csv  37-19.csv  39-20.csv  41-21.csv  43-22.csv  45-23.csv  47-24.csv  49-25.csv  5-3.csv  51-26.csv  53-27.csv  55-28.csv  57-29.csv  59-30.csv  61-31.csv  7-4.csv  9-5.csv
dune/geometry/utility/rules/jacobi2/: 1-1.csv  11-6.csv  13-7.csv  15-8.csv  17-9.csv  19-10.csv  (+25 more)
lib/: .gitignore  CMakeLists.txt  Makefile.am
python/: CMakeLists.txt  setup.py.in
python/dune/: CMakeLists.txt
python/dune/geometry/: CMakeLists.txt  __init__.py  _defaultreferenceelements_0.cc  _defaultreferenceelements_1.cc  _defaultreferenceelements_2.cc  _defaultreferenceelements_3.cc  _geometry.cc  _geometry.py  _referenceelements.py  quadpy.py  registerrefelem.cc  registerrefelem.hh  registerrefelem_0.cc  registerrefelem_1.cc  registerrefelem_2.cc  registerrefelem_3.cc  registerrefelem_4.cc
(+103 files in other folders)
